--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
 }
