--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.5.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.1",
+    "stripe": "^14.5.0"
   }
 }
